--- a/index.html
+++ b/index.html
@@ -20,8 +20,23 @@
 </head>
 
 <body>
-    <h1>WhatsApp Bot</h1>
-    <small>Twilio & Python</small>
+
+    <div class="container">
+        <h1>WhatsApp Bot</h1>
+        <small> - WhatsApp Bot Developed using Twilio and Python Flask<a href="https://api.whatsapp.com/send?phone=+14155238886&text=join%20major-noise"> Try it.</a></small>
+        <hr>
+
+        <h3>To Join :</h3>
+<code>join major-noise</code>
+Example : 
+```tell me a joke```
+
+To Stop : 
+```stop```
+    </div>
+
+
+
 
 
     <!-- Optional JavaScript -->
